platform/argocd/overlays/piew/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
    - cd.iot-nerd.nl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: piew-gateway
      namespace: cloudflare-gateway
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
